<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="hr.foi.myguide.Registracija"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp"
    android:background="@drawable/appbg"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/tourScheduleDetailScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageViewReg"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@mipmap/edit_profile" />

            <EditText
                android:id="@+id/etFirstNameReg"
                android:layout_width="220dp"
                android:layout_height="35dp"
                android:background="@drawable/edittext_shape"
                android:hint="First name"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:id="@+id/etLastNameReg"
                android:layout_width="220dp"
                android:layout_height="35dp"
                android:background="@drawable/edittext_shape"
                android:hint="Last name"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:id="@+id/etUsernameReg"
                android:layout_width="220dp"
                android:layout_height="35dp"
                android:background="@drawable/edittext_shape"
                android:hint="Username"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:id="@+id/etEmailReg"
                android:layout_width="220dp"
                android:layout_height="35dp"
                android:background="@drawable/edittext_shape"
                android:hint="Email"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:id="@+id/etPasswordReg"
                android:layout_width="220dp"
                android:layout_height="35dp"
                android:layout_marginEnd="63dp"
                android:layout_marginStart="63dp"
                android:background="@drawable/edittext_shape"
                android:hint="Password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"
                android:layout_marginTop="20dp"
                />

            <RadioGroup
                android:background="@drawable/edittext_shape"
                android:id="@+id/ergRadioGroup"
                android:layout_width="220dp"
                android:layout_height="34dp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                >


                <RadioButton
                    android:id="@+id/erbGuide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@android:color/white"
                    android:onClick="rbclick"
                    android:text="Guide"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorText" />

                <RadioButton
                    android:id="@+id/erbTourist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@android:color/white"
                    android:onClick="rbclick"
                    android:text="Tourist"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorText" />
            </RadioGroup>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/button_shape"
                android:text="Register"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:layout_marginTop="20dp"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
